--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_install:
   - curl -LO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
   - source ./macports-ci install
 script:
-  - port install lilypond
-  - port install lilypond-devel
+  - sudo port install lilypond
+  - sudo port install lilypond-devel
