--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 os: osx
 osx_image: xcode7.3
 
+env:
+  - TARGET=lilypond
+  - TARGET=lilypond-devel
+
 before_install:
   - curl -LO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
   - source ./macports-ci install
 script:
-  - sudo port install lilypond
-  - sudo port install lilypond-devel
+  - sudo port install ${TARGET}
