--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,18 +1,23 @@
 osx_instance:
   image: high-sierra-xcode-9.4.1
 
-env:
-  matrix:
-    - TARGET: lilypond
-    - TARGET: lilypond-devel
+env_task:
+  env:
+    matrix:
+      - TARGET: lilypond
+      - TARGET: lilypond-devel
 
 install_macports_task:
+  depends_on: env
   script:
     - export MACPORTS_PREFIX=/opt/${TARGET}
     - curl -LO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
     - source ./macports-ci install --prefix=${MACPORTS_PREFIX}
+
 build_mdmg_task:
-  depends_on: install_macports
+  depends_on:
+    - env
+    - install_macports
   script: sudo port mdmg ${TARGET}
   always:
     script:
