--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,20 +1,16 @@
 osx_instance:
   image: high-sierra-xcode-9.4.1
 
-install_macports_task:
+task:
   env: &env_targets
     matrix:
       - TARGET: lilypond
       - TARGET: lilypond-devel
-  script:
+  install_macports_script:
     - export MACPORTS_PREFIX=/opt/${TARGET}
     - curl -LO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
     - source ./macports-ci install --prefix=${MACPORTS_PREFIX}
-
-build_mdmg_task:
-  env: *env_targets
-  depends_on: install_macports
-  script: sudo port mdmg ${TARGET}
+  build_mdmg_script: sudo port mdmg ${TARGET}
   always:
     after_build_script:
       - file ${MACPORTS_PREFIX}/bin/lilypond
